testing/Travis/testcases/prototype/shouldFail/try18b.adl
CONTEXT Test IN ENGLISH

PATTERN Test18
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RELATION t[Q*Y]
RULE r = s;I[A];t
RULE I[D] = I[A]/\I[B]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is a more difficult version of try18.adl, as t cannot be matched to I[A] literally
   Result: PASS
    
-}